tests/frontend/fail/array/mismatched_array_type.act
contract B

constructor()

creates

  uint[3] u := [true, false]
